[gd_scene load_steps=4 format=1]

[ext_resource path="res://Art/TowerTopBlock.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TowerTopBlock.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20.7024, 5.83134 )

[node name="TowerTopBlock" type="Sprite"]

z/z = 20
texture = ExtResource( 1 )
centered = false
offset = Vector2( -166, -92 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[ "Indestructibles", "TowerTopBlocks" ]]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="LadderArea" type="Area2D" parent="KinematicBody2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -21.0438, -5.76917 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 8
collision/mask = 8

[node name="LadderCollider" type="CollisionShape2D" parent="KinematicBody2D/LadderArea"]

transform/pos = Vector2( -21.0438, -5.76917 )
transform/scale = Vector2( 1, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="KinematicBody2D/LadderArea" to="KinematicBody2D" method="_on_LadderArea_body_enter"]

[connection signal="body_exit" from="KinematicBody2D/LadderArea" to="KinematicBody2D" method="_on_LadderArea_body_exit"]


